# pagopar

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/scripts/: check-docs.mjs
.github/workflows/: check-docs.yml
pagopar/: __init__.py  _app.py  _enums.py  _errors.py  _http.py  checkout.py  courier.py  login.py  payment.py  subs.py  sync.py
references/: README.md
